# codex

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  catalogs.md  cli-reference.md  completions.md  devices.md  duplicates.md  getting-started.md  groups.md  installation.md  introduction.md  library.md  metadata-embedding.md  reader.md  tui.md  updating.md
migrations/: 0001_initial.sql  0002_metadata.sql  0003_settings.sql  0004_embed_state.sql  0005_content_hash.sql  0006_reading_progress.sql  0007_devices.sql
scripts/: install.sh  seed.sh
src/: catalog.rs  cli.rs  config.rs  dedup.rs  device.rs  embed.rs  epub.rs  fingerprint.rs  import.rs  lib.rs  main.rs  matching.rs  reader.rs  tui.rs  update.rs  welcome.rs
src/catalog/: books.rs  columns.rs  devices.rs  groups.rs  handlers.rs  render.rs  schema.rs  settings.rs  tags.rs
src/cli/: books.rs  catalog.rs  completions.rs  dedup.rs  device.rs  edit.rs  embed.rs  groups.rs  update.rs
src/config/: paths.rs
src/device/: books.rs  clean.rs  markers.rs  mounts.rs  presence.rs  pull.rs  push.rs  sync.rs  sync_job.rs  sysfs.rs
src/embed/: epub.rs  job.rs  pdf.rs
src/import/: epub.rs  mobi.rs  pdf.rs  text.rs
src/reader/: cache.rs  layout.rs  mobi.rs  pdf.rs  style.rs
src/tui/: app.rs  catalogs.rs  confirm.rs  devices.rs  duplicates.rs  help.rs  library.rs  loading.rs  new_catalog.rs  palette.rs  pick.rs  reader.rs  too_small.rs  welcome.rs  widgets.rs
tests/: book_add.rs  book_inspect.rs  book_ls.rs  book_rate.rs  book_rm.rs  book_series.rs  book_tag.rs  catalog_add.rs  catalog_global_flag.rs  catalog_init.rs  catalog_ls.rs  catalog_rm.rs  catalog_use.rs  dedup.rs  dedup_cmd.rs  device_alias.rs  device_books.rs  device_clean.rs  device_ls.rs  device_pull.rs  device_push.rs  device_sync.rs  edit_cli.rs  edit_metadata.rs  embed_sync.rs  embed_then_reimport.rs  groups_cmd.rs  reader_epub.rs  reader_mobi.rs  reader_pdf.rs  search.rs  welcome.rs
tests/common/: mod.rs
tests/fixtures/: sample.azw3  sample.epub  sample.mobi
