[package]
name = "codex"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Daniel Lima <daniel.lima@infleet.com.br>"]
description = "Terminal-first ebook library and ereader manager"
license = "MIT"
readme = "README.md"
repository = ""
keywords = ["ebook", "kindle", "cli", "library", "calibre"]
categories = ["command-line-utilities"]

[[bin]]
name = "cdx"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "=4.5.20", features = ["derive"] }
crossterm = "=0.28.1"
directories = "5.0"
# HTML → terminal text/styles for EPUB chapter rendering. html5ever-based.
# Pinned to 0.15 (MSRV 1.72); 0.16+ requires Rust 1.85 (edition2024).
html2text = { version = "0.15", default-features = false }
# Pinned to keep MSRV 1.80 happy: indexmap >=2.10 requires edition2024.
# Pulled transitively by `toml`; bumping MSRV would let this constraint relax.
indexmap = "=2.7.0"
# lopdf 0.34 is the last release on MSRV 1.80; >=0.35 pulls edition2024 deps.
lopdf = "0.34"
mobi = "0.8"
# CommonMark parser for the TUI reader (Markdown source files).
pulldown-cmark = { version = "0.13", default-features = false }
quick-xml = "0.40"
ratatui = "=0.28.1"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# Content fingerprints for import dedup; stdlib has no hashing primitive.
sha2 = "0.10"
tabwriter = "1.4"
tempfile = "3"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-input = "0.10"
# Word-boundary navigation (`w`/`b`/`e`) in the TUI reader.
unicode-segmentation = "1.12"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "=2.0.16"
insta = { version = "1.40", features = ["yaml"] }
predicates = "=3.1.2"
