[package]
name = "codex"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
authors = ["Daniel Lima <daniel.lima@infleet.com.br>"]
description = "Terminal-first ebook library and ereader manager"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Danielwsx64/codex"
keywords = ["ebook", "kindle", "cli", "library", "calibre"]
categories = ["command-line-utilities"]

[[bin]]
name = "cdx"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "=4.5.20", features = ["derive"] }
# Shell-completion generation for `cdx completions <shell>`. Tracks clap; kept in
# the 4.5.x line to stay compatible with the pinned clap = "=4.5.20" and MSRV 1.80.
clap_complete = "=4.5.37"
crossterm = "=0.28.1"
directories = "5.0"
# Free-space query for `cdx device ls`; stdlib has no statvfs and the crate's
# `#![deny(unsafe_code)]` forbids hand-rolling the syscall (fs4 keeps unsafe
# internal). Pinned to 0.8 to stay on MSRV 1.80.
fs4 = "0.8"
# HTML → terminal text/styles for EPUB chapter rendering. html5ever-based.
# Pinned to 0.15 (MSRV 1.72); 0.16+ requires Rust 1.85 (edition2024).
html2text = { version = "0.15", default-features = false }
# Pinned to keep MSRV 1.80 happy: idna_adapter >=1.1 switched to the icu backend,
# which requires edition2024. 1.0.0 uses the unicode-* backend we already pull.
# Transitive via ureq -> url -> idna; the direct pin holds it against `cargo update`.
idna_adapter = "=1.0.0"
# Pinned to keep MSRV 1.80 happy: indexmap >=2.10 requires edition2024.
# Pulled transitively by `toml`; bumping MSRV would let this constraint relax.
indexmap = "=2.7.0"
# Default features (chrono/jiff/rayon/time) pull edition2024 deps; the core
# crate builds fine on MSRV 1.80 without them, and we only touch the Info dict.
lopdf = { version = "0.36", default-features = false }
mobi = "0.8"
# Text extraction from PDF content streams for the TUI reader; lopdf alone
# only reads document structure/metadata, not glyph runs.
pdf-extract = "0.9"
# CommonMark parser for the TUI reader (Markdown source files).
pulldown-cmark = { version = "0.13", default-features = false }
quick-xml = "0.40"
# Pinned to keep MSRV 1.80 happy: rangemap >=1.6 requires rustc 1.81.
# Pulled transitively by `lopdf`; bumping MSRV would let this constraint relax.
rangemap = "=1.5.1"
ratatui = "=0.28.1"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# Content fingerprints for import dedup; stdlib has no hashing primitive.
sha2 = "0.10"
tabwriter = "1.4"
tempfile = "3"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-input = "0.10"
# Blocking HTTP client for `cdx update` (self-update via the GitHub releases API).
# rustls TLS keeps the release build free of an OpenSSL/system dependency so the
# static musl binary stays portable. Pinned to a 2.x that builds on MSRV 1.80.
ureq = { version = "2", default-features = false, features = ["tls", "json", "gzip"] }
# NFKD normalization for device↔catalog title/author matching ("Café" == "Cafe");
# stdlib has no Unicode normalization. MSRV-1.80 safe.
unicode-normalization = "0.1"
# Word-boundary navigation (`w`/`b`/`e`) in the TUI reader.
unicode-segmentation = "1.12"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Pinned to keep MSRV 1.80 happy: zeroize >=1.9 requires edition2024. Transitive
# via ureq's rustls/ring TLS stack; the direct pin holds it against `cargo update`.
zeroize = "=1.8.1"

[dev-dependencies]
assert_cmd = "=2.0.16"
insta = { version = "1.40", features = ["yaml"] }
predicates = "=3.1.2"
